--- a/moyoung/src/main/resources/application.properties
+++ b/moyoung/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=1234
 
 #jap
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.properties.hibernate.highlight-sql=true
 spring.jpa.properties.hibernate.use-sql-coments=true
