--- a/moyoung/build.gradle
+++ b/moyoung/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	
+	//websocket 추가
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
