--- a/moyoung/build.gradle
+++ b/moyoung/build.gradle
@@ -69,6 +69,12 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	//oauth2라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.1'
+	
 }
 
 tasks.named('test') {
