FEAT: 쪽지(note) 기능 구현(CRUD)완료 //TODO: entity의 status기능 추가해야함

--- a/moyoung/src/main/resources/application.properties
+++ b/moyoung/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 #jap
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.properties.hibernate.highlight-sql=true
 spring.jpa.properties.hibernate.use-sql-coments=true
