--- a/moyoung/src/main/resources/application.properties
+++ b/moyoung/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.servlet.multipart.maxFileSize=1000MB
 spring.servlet.multipart.maxRequestSize=1000MB
 
 
-naver.mail.username=email
-naver.mail.password=password
+naver.mail.username=ydevelop
+naver.mail.password=yDev123153c!@3
 
 
 # jwt
@@ -74,3 +74,6 @@ spring.security.oauth2.client.registration.google.client-id = id
 spring.security.oauth2.client.registration.google.client-secret= secret
 spring.security.oauth2.client.registration.google.scope = profile, email
 
+spring.task.execution.pool.core-size=8
+spring.task.execution.pool.max-size=16
+spring.task.execution.pool.queue-capacity=100
