--- a/moyoung/src/main/resources/application.properties
+++ b/moyoung/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8090
+#BaseURL
+api.base.furl=https://localhost:3000
+api.base.burl=https://localhost:8090
 
 # database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
