--- a/moyoung/build.gradle
+++ b/moyoung/build.gradle
@@ -73,7 +73,7 @@ dependencies {
 	//websocket 추가
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	//oauth2라이브러리 추가
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.1'
